log
Fri Mar 11 18:54:25 HSP 2022: 
 tests:  0|7
total_score: 0/70
bada42c
Fri Mar 11 19:02:10 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9a60b62
Fri Mar 11 20:12:29 HSP 2022: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:40:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     (*suma) = ((a+(n-m)),m) ;
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
808755a
Fri Mar 11 20:15:05 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
2f4dab7
Fri Mar 11 20:16:13 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ae9313a
Fri Mar 11 20:18:30 HSP 2022: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:41:8: error: unused variable 'ANR' [-Werror=unused-variable]
    int ANR = sumaN(a,n-m);
        ^~~
exercises.c:40:8: error: unused variable 'AN' [-Werror=unused-variable]
    int AN = sumaN(a,n);
        ^~
cc1.exe: all warnings being treated as errors
Compilation failed
ea4b675
Fri Mar 11 20:18:55 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f56d48c
Sun Mar 13 23:52:28 HSP 2022: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:62:21: error: expected ')' before '=' token
    Persona (*vector = (Persona *) malloc(sizeof(Persona));
                     ^
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
test.c:266:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
bc5bc4d
Sun Mar 13 23:53:28 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ffc1170
Sun Mar 13 23:54:08 HSP 2022: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
651cb73
Sun Mar 13 23:55:19 HSP 2022: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c:87:10: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'struct'
 ttypedef struct {
          ^~~~~~
exercises.c:92:1: error: unknown type name 'Vector'
 Vector * crearVector(int n) {
 ^~~~~~
exercises.c: In function 'crearVector':
exercises.c:93:12: error: 'memoria' undeclared (first use in this function)
    Vector* memoria=(Vector*)calloc(n,sizeof(Vector));
            ^~~~~~~
exercises.c:93:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:93:28: error: expected expression before ')' token
    Vector* memoria=(Vector*)calloc(n,sizeof(Vector));
                            ^
exercises.c: At top level:
exercises.c:105:19: error: expected declaration specifiers or '...' before 'Vector'
 void asignarValor(Vector * v, int i, int valor) {
                   ^~~~~~
exercises.c:114:18: error: expected declaration specifiers or '...' before 'Vector'
 int obtenerValor(Vector * v, int i) {
                  ^~~~~~
exercises.c:123:12: error: expected declaration specifiers or '...' before 'Vector'
 void sumaV(Vector * a, Vector * b, Vector * c) {
            ^~~~~~
exercises.c:123:24: error: expected declaration specifiers or '...' before 'Vector'
 void sumaV(Vector * a, Vector * b, Vector * c) {
                        ^~~~~~
exercises.c:123:36: error: expected declaration specifiers or '...' before 'Vector'
 void sumaV(Vector * a, Vector * b, Vector * c) {
                                    ^~~~~~
exercises.c:132:45: error: expected declaration specifiers or '...' before 'Vector'
 void sumaV2(int a1, int a2, int b1, int b2, Vector *c){
                                             ^~~~~~
test.c: In function 'test_creaV':
test.c:133:13: error: 'v' undeclared (first use in this function)
     Vector *v = crearVector(size);
             ^
test.c: In function 'test_asignarObtenerValor':
test.c:157:13: error: 'v' undeclared (first use in this function)
     Vector *v = (Vector*)malloc(sizeof(Vector));
             ^
test.c:157:25: error: expected expression before ')' token
     Vector *v = (Vector*)malloc(sizeof(Vector));
                         ^
test.c:160:5: error: implicit declaration of function 'asignarValor' [-Werror=implicit-function-declaration]
     asignarValor(v, 0, a);
     ^~~~~~~~~~~~
test.c:164:13: error: implicit declaration of function 'obtenerValor' [-Werror=implicit-function-declaration]
     int val=obtenerValor(v,0);
             ^~~~~~~~~~~~
test.c: In function 'test_sumaV':
test.c:190:13: error: 'v1' undeclared (first use in this function)
     Vector *v1 = (Vector*)malloc(sizeof(Vector));
             ^~
test.c:190:26: error: expected expression before ')' token
     Vector *v1 = (Vector*)malloc(sizeof(Vector));
                          ^
test.c:200:13: error: 'v2' undeclared (first use in this function)
     Vector *v2 = (Vector*)malloc(sizeof(Vector));
             ^~
test.c:200:26: error: expected expression before ')' token
     Vector *v2 = (Vector*)malloc(sizeof(Vector));
                          ^
test.c:207:13: error: 'v3' undeclared (first use in this function)
     Vector *v3 = (Vector*)malloc(sizeof(Vector));
             ^~
test.c:207:26: error: expected expression before ')' token
     Vector *v3 = (Vector*)malloc(sizeof(Vector));
                          ^
test.c:211:5: error: implicit declaration of function 'sumaV' [-Werror=implicit-function-declaration]
     sumaV(v1, v2, v3);
     ^~~~~
test.c: In function 'test_sumaV2':
test.c:225:13: error: 'c' undeclared (first use in this function)
     Vector *c = (Vector*)malloc(sizeof(Vector));
             ^
test.c:225:25: error: expected expression before ')' token
     Vector *c = (Vector*)malloc(sizeof(Vector));
                         ^
test.c:231:5: error: implicit declaration of function 'sumaV2' [-Werror=implicit-function-declaration]
     sumaV2(a1,a2,b1,b2,c);
     ^~~~~~
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cdb109c
Sun Mar 13 23:55:26 HSP 2022: 
 exercises.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 30/70
19f9192
Sun Mar 13 23:55:35 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
6b1e105
Sun Mar 13 23:56:46 HSP 2022: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:99:12: error: 'memoria' undeclared (first use in this function)
    return (memoria);
            ^~~~~~~
exercises.c:99:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
53ce1fb
Sun Mar 13 23:58:04 HSP 2022: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:110:21: error: 'Vector {aka struct <anonymous>}' has no member named 'xd'
     for(i = 0; i < v->xd; i++) {
                     ^~
Compilation failed
d1aca2d
Sun Mar 13 23:58:37 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:110:21: error: 'Vector {aka struct <anonymous>}' has no member named 'xd'
     for(i = 0; i < v->xd; i++) {
                     ^~
Compilation failed
d1a8c7c
Sun Mar 13 23:58:52 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
42beb7b
Mon Mar 14 00:00:27 HSP 2022: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
5f293db
Mon Mar 14 00:01:06 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
824233a
Mon Mar 14 00:02:17 HSP 2022: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|3
total_score: 40/70
5b54989
